# LectureSearch

./: .gitignore  README.md
search_backend/: .dockerignore  Cargo.toml  Dockerfile  README.md  fly.toml  typesense_openapi.yml
search_backend/src/: main.rs  transcription_tasks.rs
search_frontend/: README.md  package-lock.json  package.json
search_frontend/src/app/: page.tsx
transcription_pipeline/: Dockerfile  README.md  batch_transcription.sh  fly.toml  gen_video_ids.sh  requirements.txt  transcribe_yt_videos.py  transcribe_yt_videos.sh  upload_to_typesense_idx.py
typesense_search_idx/: README.md  fly.toml
