[package]
name = "lecturesearch-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.5"
redis = "0.24.0"
reqwest = { version = "0.11.22", features = ["json"] }
rusqlite = "0.31.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1", features = ["full"] }
typesense_codegen = { version = "0.23.0", path = "./typesense_codegen" }
url = "2.5.0"
